--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
-    <string name="app_name">RemLoc1</string>
-    <string name="remloc">RemLoc</string>
+    <string name="app_name">RemLoc</string>
     <string name="my_awesome_app">My awesome app</string>
     <string name="email_address">Email Address</string>
     <string name="password">Password</string>
@@ -8,4 +7,6 @@
     <string name="google_sign_in">Google Sign In</string>
     <string name="sign_in_with_google">Sign in with Google</string>
     <string name="logout">Logout</string>
+    <string name="open">Open</string>
+    <string name="close">Close</string>
 </resources>
