--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,50 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">RemLoc</string>
-    <string name="my_awesome_app">My awesome app</string>
-    <string name="email_address">Email Address</string>
-    <string name="password">Password</string>
-    <string name="register">Register</string>
-    <string name="google_sign_in">Google Sign In</string>
+
     <string name="sign_in_with_google">Sign in with Google</string>
+    <string name="places">Places</string>
+    <string name="actions">Actions</string>
+    <string name="game_miejska">Game Miejska</string>
+    <string name="settings">Settings</string>
+    <string name="help_and_feedback">Help and feedback</string>
+    <string name="profile">Profile</string>
     <string name="logout">Logout</string>
     <string name="open">Open</string>
     <string name="close">Close</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_maps">MapsActivity</string>
+
+    <string name="add">Add</string>
+    <string name="search_location">Search Location</string>
+    <string name="enter_phone_number">Enter phone number</string>
+    <string name="select_contact">Select contact:</string>
+    <string name="enter_your_text_message">Enter your text message</string>
+    <string name="select_place">Select a place:</string>
+    <string name="save_action">Save action</string>
+    <string name="place_name">Place name</string>
+    <string name="sms_text">Sms text</string>
+    <string name="coordinates">Coordinates</string>
+    <string name="remove_action">Remove Action</string>
+    <string name="edit_sms_text">Edit sms text</string>
+    <string name="edit_phone_number">Edit phone number</string>
+    <string name="change_place">Change place:</string>
+    <string name="save_changes">Save changes</string>
+    <string name="address">Address</string>
+    <string name="remove_place">Remove Place</string>
+    <string name="edit_place_name">Edit place name</string>
+    <string name="coming_soon">Coming soon</string>
+    <string name="help_feedback">Help, Feedback</string>
+    <string name="username">Username</string>
+    <string name="email">Email</string>
+    <string name="home">Home</string>
+    <string name="serbska_17_61_696_pozna_poland">Serbska 17, 61–696 Poznań, Poland</string>
+
+    <string name="choose_language">Choose language:</string>
+    <string name="change_language">Change language</string>
+    <string name="edit_action">Edit action</string>
+    <string name="edit_place">Edit place</string>
+    <string name="add_action">Add action</string>
+
+    <string name="choose_place">Choose place:</string>
+    <string name="choose_contact">Choose contact:</string>
+    <string name="already_selected">Language already selected</string>
+
 </resources>
