--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,8 +43,10 @@
     <string name="edit_place">Edit place</string>
     <string name="add_action">Add action</string>
 
-    <string name="choose_place">Choose place:</string>
+    <string name="choose_place">Choose place</string>
     <string name="choose_contact">Choose contact:</string>
     <string name="already_selected">Language already selected</string>
+    <string name="provide_label">Enter the title</string>
+    <string name="place">Place</string>
 
 </resources>
