--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">RemLoc</string>
+    <string name="MAPS_API_KEY" translatable="false">AIzaSyAmq-wLmDDjk8hmh-kp2oZqVUxSeQTQ0jI</string>
 
     <string name="sign_in_with_google">Sign in with Google</string>
     <string name="places">Places</string>
