--- a/app/src/main/res/values-uk-rUA/strings.xml
+++ b/app/src/main/res/values-uk-rUA/strings.xml
@@ -48,4 +48,5 @@
     <string name="already_selected">Мова вже вибрана</string>
     <string name="provide_label">Введіть назву</string>
     <string name="place">Місце</string>
+    <string name="select">Вибрати</string>
 </resources>
