--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="search_location">Search Location</string>
     <string name="enter_phone_number">Enter phone number</string>
     <string name="select_contact">Select contact:</string>
-    <string name="enter_your_text_message">Enter your text message</string>
+    <string name="enter_your_text_message">Enter your message</string>
     <string name="select_place">Select a place:</string>
     <string name="save_action">Save action</string>
     <string name="place_name">Place name</string>
@@ -45,9 +45,15 @@
     <string name="add_action">Add action</string>
 
     <string name="choose_place">Choose place</string>
-    <string name="choose_contact">Choose contact:</string>
+    <string name="choose_contact">Choose contact</string>
     <string name="already_selected">Language already selected</string>
     <string name="provide_label">Enter the title</string>
     <string name="place">Place</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="change_contact">Change contact:</string>
+    <string name="select_type_of_action">Select type of action</string>
+    <string name="sms">Sms</string>
+    <string name="mute_the_sound">Mute the sound</string>
+    <string name="notification">Notification</string>
 
 </resources>
