--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -55,4 +55,5 @@
     <string name="mute_the_sound">Wycisz dźwięk</string>
     <string name="notification">Powiadomienie</string>
     <string name="select">Wybrać</string>
+    <string name="find_place">Znajdź miejsce</string>
 </resources>
