--- a/app/src/main/res/values-uk-rUA/strings.xml
+++ b/app/src/main/res/values-uk-rUA/strings.xml
@@ -54,4 +54,5 @@
     <string name="mute_the_sound">Вимкнути звук</string>
     <string name="notification">Повідомлення</string>
     <string name="select">Обрати</string>
+    <string name="find_place">Знайди місце</string>
 </resources>
