--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,5 +56,6 @@
     <string name="mute_the_sound">Mute the sound</string>
     <string name="notification">Notification</string>
     <string name="select">Select</string>
+    <string name="find_place">Find place</string>
 
 </resources>
