--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -56,4 +56,5 @@
     <string name="notification">Powiadomienie</string>
     <string name="select">Wybrać</string>
     <string name="find_place">Znajdź miejsce</string>
+    <string name="language">Język</string>
 </resources>
