--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -55,4 +55,5 @@
     <string name="notification">Уведомление</string>
     <string name="select">Выбрать</string>
     <string name="find_place">Найти место</string>
+    <string name="language">Язык</string>
 </resources>
