--- a/app/src/main/res/values-uk-rUA/strings.xml
+++ b/app/src/main/res/values-uk-rUA/strings.xml
@@ -55,4 +55,5 @@
     <string name="notification">Повідомлення</string>
     <string name="select">Обрати</string>
     <string name="find_place">Знайди місце</string>
+    <string name="language">Мова</string>
 </resources>
