--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -56,4 +56,31 @@
     <string name="select">Выбрать</string>
     <string name="find_place">Найти место</string>
     <string name="language">Язык</string>
+    <string name="action_type">Тип действия</string>
+    <string name="latitude">Широта:</string>
+    <string name="longitude">Долгота:</string>
+    <string name="list_of_places">Список мест</string>
+    <string name="permissions">Разрешения</string>
+    <string name="location">Mестоположение</string>
+    <string name="contacts">Контакты</string>
+    <string name="if_you_want_to_deny_a_permission_you_need_to_go_to">Если вы хотите отказать в разрешении, вам нужно перейти к:</string>
+    <string name="settings_apps_remloc_permissions"><![CDATA[Настройки > Приложения > RemLoc > Разрешения]]></string>
+    <string name="delete_all_data_from_app">Удалить все данные из приложения</string>
+    <string name="label">Этикетка</string>
+    <string name="use_the_default_value">Использовать значение по умолчанию</string>
+    <string name="cancel">Отмена</string>
+    <string name="ok">Ок</string>
+    <string name="success" >Успех</string>
+    <string name="failed_to_upd_data">Не удалось обновить данные</string>
+    <string name="set_parameters">Установите все параметры</string>
+    <string name="failed">Не удалось</string>
+    <string name="succ_deleted">Успешно удалено</string>
+    <string name="failed_to_delete">Не удалось удалить</string>
+    <string name="log_out">Выход</string>
+    <string name="contact_name_and_phone_number">Название контакта и номер телефона</string>
+    <string name="log_in">Вход</string>
+    <string name="deleting" >Удаление</string>
+    <string name="you_sure_del_data">Вы уверены, что хотите удалить все данные?</string>
+    <string name="yes" >Да</string>
+    <string name="no" >Нет</string>
 </resources>
