--- a/app/src/main/res/values-uk-rUA/strings.xml
+++ b/app/src/main/res/values-uk-rUA/strings.xml
@@ -56,4 +56,31 @@
     <string name="select">Обрати</string>
     <string name="find_place">Знайди місце</string>
     <string name="language">Мова</string>
+    <string name="action_type">Тип дії</string>
+    <string name="latitude">Широта:</string>
+    <string name="longitude">Довгота:</string>
+    <string name="list_of_places">Список місць</string>
+    <string name="permissions">Дозволи</string>
+    <string name="location">Місцезнаходження</string>
+    <string name="contacts">Контакти</string>
+    <string name="if_you_want_to_deny_a_permission_you_need_to_go_to">Якщо ви хочете відмовити у дозволі, перейдіть до:</string>
+    <string name="settings_apps_remloc_permissions"><![CDATA[Налаштування > Програми > RemLoc > Дозволи]]></string>
+    <string name="delete_all_data_from_app">Видалити всі дані з програми</string>
+    <string name="label">Етикетка</string>
+    <string name="use_the_default_value">Використовувати значення за замовчуванням</string>
+    <string name="cancel">Скасувати</string>
+    <string name="ok">Ок</string>
+    <string name="success" >Успіх</string>
+    <string name="failed_to_upd_data">Не вдалося оновити дані</string>
+    <string name="set_parameters">Встановіть усі параметри</string>
+    <string name="failed">Не вдалося</string>
+    <string name="succ_deleted">Успішно видалено</string>
+    <string name="failed_to_delete">Не вдалося видалити</string>
+    <string name="log_out">Вихід</string>
+    <string name="contact_name_and_phone_number">Назва контакту та номер телефону</string>
+    <string name="log_in">Вхід</string>
+    <string name="deleting" >Видалення</string>
+    <string name="you_sure_del_data">Ви впевнені, що хочете видалити всі дані?</string>
+    <string name="yes" >Так</string>
+    <string name="no" >Ні</string>
 </resources>
