--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,5 +58,32 @@
     <string name="select">Select</string>
     <string name="find_place">Find place</string>
     <string name="language">Language</string>
+    <string name="action_type">Action type</string>
+    <string name="latitude">Latitude:</string>
+    <string name="longitude">Longitude:</string>
+    <string name="list_of_places">List of places</string>
+    <string name="permissions">Permissions</string>
+    <string name="location">Location</string>
+    <string name="contacts">Contacts</string>
+    <string name="if_you_want_to_deny_a_permission_you_need_to_go_to">If you want to deny a permission, you need to go to:</string>
+    <string name="settings_apps_remloc_permissions"><![CDATA[Settings > Apps > RemLoc > Permissions]]></string>
+    <string name="delete_all_data_from_app">Delete all data from app</string>
+    <string name="label">Label</string>
+    <string name="use_the_default_value">Use the default value</string>
+    <string name="cancel">Cancel</string>
+    <string name="ok">Ok</string>
+    <string name="success" >Success</string>
+    <string name="failed_to_upd_data">Failed to update data</string>
+    <string name="set_parameters">Set all of the parameters</string>
+    <string name="failed">Failed</string>
+    <string name="succ_deleted">Successfully deleted</string>
+    <string name="failed_to_delete">Failed to delete</string>
+    <string name="log_out">Logging Out</string>
+    <string name="contact_name_and_phone_number">Contact name and phone number</string>
+    <string name="log_in">Logging In</string>
+    <string name="deleting" >Deleting</string>
+    <string name="you_sure_del_data">You sure you want to delete all of the data?</string>
+    <string name="yes" >Yes</string>
+    <string name="no" >No</string>
 
 </resources>
