--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -57,4 +57,31 @@
     <string name="select">Wybrać</string>
     <string name="find_place">Znajdź miejsce</string>
     <string name="language">Język</string>
+    <string name="action_type">Rodzaj akcji</string>
+    <string name="latitude">Szerokość:</string>
+    <string name="longitude">Długość:</string>
+    <string name="list_of_places">Lista miejsc</string>
+    <string name="permissions">Pozwolenia</string>
+    <string name="location">Lokalizacja</string>
+    <string name="contacts">Kontakty</string>
+    <string name="if_you_want_to_deny_a_permission_you_need_to_go_to">Jeśli chcesz odmówić pozwolenia, musisz przejść do:</string>
+    <string name="settings_apps_remloc_permissions"><![CDATA[Ustawienia > Aplikacje > RemLoc > Pozwolenia]]></string>
+    <string name="delete_all_data_from_app">Usuń wszystkie dane z aplikacji</string>
+    <string name="label">Etykieta</string>
+    <string name="use_the_default_value">Użyj wartości domyślnej</string>
+    <string name="cancel">Anulować</string>
+    <string name="ok">Ok</string>
+    <string name="success" >Powodzenie</string>
+    <string name="failed_to_upd_data">Nie udało się zaktualizować danych</string>
+    <string name="set_parameters">Ustaw wszystkie parametry</string>
+    <string name="failed">Przegrany</string>
+    <string name="succ_deleted">Pomyślnie usunięto</string>
+    <string name="failed_to_delete">Nie udało się usunąć</string>
+    <string name="log_out">Wylogowanie</string>
+    <string name="contact_name_and_phone_number">Imię kontaktu oraz numer telefonu</string>
+    <string name="log_in">Logowanie</string>
+    <string name="deleting" >Usuwanie</string>
+    <string name="you_sure_del_data">Na pewno chcesz usunąć wszystkie dane?</string>
+    <string name="yes" >Tak</string>
+    <string name="no" >Nie</string>
 </resources>
