--- a/app/src/main/res/values-uk-rUA/strings.xml
+++ b/app/src/main/res/values-uk-rUA/strings.xml
@@ -83,4 +83,5 @@
     <string name="you_sure_del_data">Ви впевнені, що хочете видалити всі дані?</string>
     <string name="yes" >Так</string>
     <string name="no" >Ні</string>
+    <string name="cant_find" >Неможливо знайти місце, будь ласка, спробуйте інше!</string>
 </resources>
