--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -85,4 +85,5 @@
     <string name="yes" >Tak</string>
     <string name="no" >Nie</string>
     <string name="cant_find" >Nie możliwie znaleźć miejsca, spróbuj innego!</string>
+    <string name="check">sprawdż</string>
 </resources>
