--- a/app/src/main/res/values-uk-rUA/strings.xml
+++ b/app/src/main/res/values-uk-rUA/strings.xml
@@ -84,4 +84,5 @@
     <string name="yes" >Так</string>
     <string name="no" >Ні</string>
     <string name="cant_find" >Неможливо знайти місце, будь ласка, спробуйте інше!</string>
+    <string name="check">перевір</string>
 </resources>
