--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -86,5 +86,6 @@
     <string name="yes">Yes</string>
     <string name="no">No</string>
     <string name="cant_find" >Can\'t find the location, please try another!</string>
+    <string name="check">check</string>
 
 </resources>
