Added Maps click marker Fixed permissions Small Bug fixed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,9 +84,11 @@
     <string name="you_sure_del_data">You sure you want to delete all of the data?</string>
     <string name="yes">Yes</string>
     <string name="no">No</string>
-    <string name="cant_find" >Can\'t find the location, please try another!</string>
+    <string name="cant_find">Can\'t find the location, please try another!</string>
     <string name="check">check</string>
     <string name="google_maps_api_key" translatable="false">AIzaSyAVorUrI4JI1QDy-esFG03pG-cc9--wT84</string>
     <string name="firebase_database_url" translatable="false">https://remloc1-fbe72-default-rtdb.europe-west1.firebasedatabase.app</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
