--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -85,4 +85,14 @@
     <string name="no" >Нет</string>
     <string name="cant_find" >Невозможно найти место, попробуйте другое!</string>
     <string name="check">проверь</string>
+    <string name="welcome_to_remloc">Добро пожаловать в RemLoc</string>
+    <string name="change_default_trigger_distance">Изменить расстояние срабатывания по умолчанию</string>
+    <string name="stop_tracking_location">Остановить отслеживание местоположения</string>
+    <string name="start_tracking_location">Начать отслеживание местоположения</string>
+    <string name="m">м</string>
+    <string name="to_use_the_application_please_provide_us_a_permissions">Чтобы использовать приложение, пожалуйста, предоставьте нам разрешения!</string>
+    <string name="next">Дальше</string>
+    <string name="choose_your_theme">Выберите свою тему</string>
+    <string name="what_problem_feedback_do_you_have">Какая у вас проблема/отзыв?</string>
+    <string name="send_an_a_email">Отправить e-mail</string>
 </resources>
