--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,5 +101,6 @@
     <string name="send_an_a_email">Send an a email</string>
     <string name="help">Help</string>
     <string name="feedback">Feedback</string>
+    <string name="theme">Choose theme</string>
 
 </resources>
