--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,5 +102,6 @@
     <string name="help">Help</string>
     <string name="feedback">Feedback</string>
     <string name="theme">Choose theme</string>
+    <!-- TODO: Remove or change this placeholder text -->
 
 </resources>
