--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -99,4 +99,5 @@
     <string name="help">Pomoc</string>
     <string name="feedback">Informacja zwrotna</string>
     <string name="theme">Wybrać temat</string>
+    <string name="select_city">Wybierz miasto</string>
 </resources>
