--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -98,4 +98,5 @@
     <string name="help">Помощь</string>
     <string name="feedback">Обратная связь</string>
     <string name="theme">Выберете тему</string>
+    <string name="select_city">Выберите город</string>
 </resources>
