--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,6 +102,7 @@
     <string name="help">Help</string>
     <string name="feedback">Feedback</string>
     <string name="theme">Choose theme</string>
+    <string name="select_city">Select city to play</string>
     <!-- TODO: Remove or change this placeholder text -->
 
 </resources>
