GameMiejska (Alert dialog)

--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -99,4 +99,5 @@
     <string name="feedback">Обратная связь</string>
     <string name="theme">Выберете тему</string>
     <string name="select_city">Выберите город</string>
+    <string name="game_suggest">Предложить игру</string>
 </resources>
