--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -100,4 +100,5 @@
     <string name="feedback">Informacja zwrotna</string>
     <string name="theme">Wybrać temat</string>
     <string name="select_city">Wybierz miasto</string>
+    <string name="game_suggest">Zaproponuj grę</string>
 </resources>
