--- a/app/src/main/res/values-uk-rUA/strings.xml
+++ b/app/src/main/res/values-uk-rUA/strings.xml
@@ -99,4 +99,5 @@
     <string name="feedback">Зворотній зв\'язок</string>
     <string name="theme">Вибрати тему</string>
     <string name="select_city">Виберіть місто</string>
+    <string name="game_suggest">Запропонуйте гру</string>
 </resources>
