--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -103,6 +103,7 @@
     <string name="feedback">Feedback</string>
     <string name="theme">Choose theme</string>
     <string name="select_city">Select city to play</string>
+    <string name="game_suggest">Suggest a game</string>
     <!-- TODO: Remove or change this placeholder text -->
 
 </resources>
