--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -102,4 +102,9 @@
     <string name="select_city">Wybierz grę</string>
     <string name="game_suggest">Zaproponuj grę</string>
     <string name="user_manual">Instrukcja użytkownika</string>
+    <string name="claim">Zająć!</string>
+    <string name="nice_job_to_move_on_you_need_to_claim_this_place">Dobra robota! Aby przejść dalej, musisz zająć to miejsce!</string>
+    <string name="you_fo_to_the">Przyszedłeś do</string>
+    <string name="congrats_score">Świetna robota, pokonałeś naszą grę. Gratulacje, Twój wynik to</string>
+    <string name="exit_button">Koniec gry!</string>
 </resources>
