--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -108,4 +108,6 @@
     <string name="exit_button">Конец игры!</string>
     <string name="divider">" - "</string>
     <string name="your_scores">Ваши баллы:</string>
+    <string name="turn_on">Включить</string>
+    <string name="turn_on_off">Включить / выключить</string>
 </resources>
