--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -5,7 +5,7 @@
     <string name="sign_in_with_google">Войти через Google</string>
     <string name="places">Места</string>
     <string name="actions">Действия</string>
-    <string name="game_miejska">Игра Miejska</string>
+    <string name="game_miejska">Городская Игра</string>
     <string name="settings">Настройки</string>
     <string name="help_and_feedback">Помощь и обратная связь</string>
     <string name="profile">Профиль</string>
@@ -110,4 +110,11 @@
     <string name="your_scores">Ваши баллы:</string>
     <string name="turn_on">Включить</string>
     <string name="turn_on_off">Включить / выключить</string>
+    <string name="hint_5_points">Подсказка (-5 баллов)</string>
+    <string name="exit_the_game">Выйти из игры</string>
+    <string name="miejsce">Место №</string>
+    <string name="please_wait">Подождите, это может занять несколько секунд...</string>
+    <string name="welcome_to">Добро пожаловать в</string>
+    <string name="start_game">Начать игру</string>
+    <string name="city_game">Городской Игре</string>
 </resources>
