--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="sign_in_with_google">Sign in with Google</string>
     <string name="places">Places</string>
     <string name="actions">Actions</string>
-    <string name="game_miejska">Game Miejska</string>
+    <string name="game_miejska">City Game</string>
     <string name="settings">Settings</string>
     <string name="help_and_feedback">Help and feedback</string>
     <string name="profile">Profile</string>
@@ -115,6 +115,13 @@
     <string name="your_scores">Your scores:</string>
     <string name="turn_on">Turn On</string>
     <string name="turn_on_off">Turn on/off</string>
+    <string name="hint_5_points">Hint (-5 points)</string>
+    <string name="exit_the_game">Exit the game</string>
+    <string name="miejsce">Place №</string>
+    <string name="please_wait">Please wait, it may take a few seconds...</string>
+    <string name="welcome_to">Welcome to</string>
+    <string name="start_game">Start game</string>
+    <string name="city_game">City Game</string>
     <!-- TODO: Remove or change this placeholder text -->
 
 </resources>
